fix scrolling issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ header {
 	overflow-y: auto;
 	/* Allow the main content to scroll if needed */
 	justify-self: right;
-	height: 100vh;
+	/* height: 100vh; */
 	width: 80%;
 }
 
@@ -418,7 +418,7 @@ nav a:hover {
 }
 
 #page-layout {
-	height: 100vh;
+	/* height: 100vh; */
 	display: grid;
 	position: relative;
 	grid-template-areas:
